--- a/portalVentas/templates/portalVentas/include/oferta.html
+++ b/portalVentas/templates/portalVentas/include/oferta.html
@@ -10,7 +10,7 @@
                     {% for fruta in oferta|dictsort:"FECHA_COSECHA" %}
                             <div class="slider__elemento">
                                 <div class="contenedor-tarjeta relative bg-white">
-                                    <div class="absolute"  style="top: -40px; right: -40px;">
+                                    <div class="absolute"  style="top: -40px; right: -40px; z-index: 999;">
                                         <img src="/static/img/bg-dcto.png" alt="" class="w-24 h-2w-24" style="filter: saturate(1.8);">
                                         <p class="absolute text-2xl text-white font-lato font-semibold"  style="top: 35px; right: 20px;">-<bdi>15</bdi>%</p>
                                     </div>
