--- a/portalVentas/templates/portalVentas/base.html
+++ b/portalVentas/templates/portalVentas/base.html
@@ -1,11 +1,28 @@
 {% load static %}
+{% load pwa %}
 <!DOCTYPE html>
 <html lang="es" style="scroll-behavior: smooth;">
-
-<head>
+  <head>
+  {% progressive_web_app_meta %}
   <meta charset="utf-8" />
   <title>{% block title %}{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- PWA -->
+  <!-- <meta name="theme-color" content="#10b981">
+  <meta name="MobileOptimized" content="width">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" href="{% static '/img/favicon.ico' %}"> -->
+  <link rel="apple-touch-startup-image" href="{% static '/img/favicon.ico' %}">
+  <!-- <link rel="manifest" href="{% static '/js/manifest.json' %}"> -->
+  <!-- <script>
+    if('serviceWorker' in navigator){
+      navigator.serviceWorker.register('/static/js/sw.js')
+      .catch(err => console.warn('Error al registrar el SW', err))
+    };
+  </script> -->
+  
   <link rel="icon" type="image/x-icon" href="{% static '/img/favicon.ico' %}" />
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   <script src="{% static 'js/fn.js' %}"></script>
