--- a/portalVentas/templates/portalVentas/include/banner.html
+++ b/portalVentas/templates/portalVentas/include/banner.html
@@ -14,7 +14,7 @@
         <div class="contenedor-info__tit">
             <h2>Exportación al extranjero</h2>
         </div>
-        <div class="contenedor-info__par">
+        <div class="contenedor-info__par text-center md:text-justify">
             <p>
                 Contamos con procesos de selección de fruta validados y con clientes satisfechos alrededor del mundo.
             </p>
@@ -27,7 +27,7 @@
         <div class="contenedor-info__tit">
             <h2>Productores locales</h2>
         </div>
-        <div class="contenedor-info__par">
+        <div class="contenedor-info__par text-center md:text-justify">
             <p>
                 Nuestros productos proceden de productores locales con la fruta de mejor calidad y certificaciones agrarias vigentes.
             </p>
@@ -40,7 +40,7 @@
         <div class="contenedor-info__tit">
             <h2>Venta de saldos locales</h2>
         </div>
-        <div class="contenedor-info__par">
+        <div class="contenedor-info__par text-center md:text-justify">
             <p>
                 Mantenemos nuestras frutas bajo almacenamientos certificados y ofrecemos una calidad local que nos recomienda.
             </p>
