--- a/portalVentas/templates/portalVentas/transbank.html
+++ b/portalVentas/templates/portalVentas/transbank.html
@@ -66,7 +66,7 @@
                             </div>
                             <div class="transbank-contenedor-columna flex-grow text-left py-2">
                                 <span
-                                    class="transbank-contenedor-columna__span font-lato font-light" style="color: #303460;">$ {{ inputName.DETALLE_INPUT_TOTAL }}</span>
+                                    class="transbank-contenedor-columna__span font-lato font-light" style="color: #303460;">{{ inputName.DETALLE_INPUT_TOTAL }}</span>
                             </div>
                         </div>
                     </div>
