--- a/portalVentas/templates/portalVentas/usuario.html
+++ b/portalVentas/templates/portalVentas/usuario.html
@@ -8,7 +8,7 @@
 <style>
 
     .usuario-contenedor-personalizado__p{
-        display: non;
+        display: none;
         
         background-color: rgba(0, 0, 0, .9);
         border-radius: 10px;
