--- a/portalVentas/templates/portalVentas/include/solicitudListar.html
+++ b/portalVentas/templates/portalVentas/include/solicitudListar.html
@@ -14,13 +14,15 @@
 
 
 <script>
-    if(document.querySelector('.listarSolicitud-contenedor-solicitudes').childElementCount > 0){
-        document.querySelector('.listarSolicitud-contenedor-solicitudes').classList.remove('hidden');
-        document.querySelector('.listarSolicitud-vacio').classList.add('hidden');
-    }else{
-        document.querySelector('.listarSolicitud-contenedor-solicitudes').classList.add('hidden');
-    };
-    
+    setTimeout(() => {
+        if(document.querySelector('.listarSolicitud-contenedor-solicitudes').childElementCount > 0){
+            document.querySelector('.listarSolicitud-contenedor-solicitudes').classList.remove('hidden');
+            document.querySelector('.listarSolicitud-vacio').classList.add('hidden');
+        }else{
+            document.querySelector('.listarSolicitud-contenedor-solicitudes').classList.add('hidden');
+        }; 
+    }, 1000);
+
     document.addEventListener('click', e => {
         if(/-listarSolicitud-detalle-btn$/.test(e.target.id)){
             document.getElementById(`${e.target.id[0]}-listarSolicitud-contenedor`).classList.toggle('hidden');
@@ -28,7 +30,7 @@
     });
 
     const solicitudes = [];
-    let concurrencia;    
+    let concurrencia;
     {% for obj in viewListaSolicitudes %}
 
         concurrencia = 0;
@@ -220,9 +222,9 @@
                 label.parentElement.parentElement.classList.add('border-l-8');
                 label.parentElement.parentElement.classList.add('border-red-500');
                 break;
-        
 
-        }; 
+
+        };
     });
     // Insertar Detalle
 </script>
